PERSO ENV 1/src/objects/HistoryVehicle__c.object
<CustomObject>
    <fields>
        <fullName>ModificationDate__c</fullName>
        <label>ModificationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewLicencePlate__c</fullName>
        <label>NewLicencePlate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewOwner</label>
        <referenceTo>Owner__c</referenceTo>
        <relationshipName>HistoryLicencePlates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <label>NewStatus</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldLicencePlate__c</fullName>
        <label>OldLicencePlate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OldOwner</label>
        <referenceTo>Owner__c</referenceTo>
        <relationshipName>HistoryLicencePlates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldStatus__c</fullName>
        <label>OldStatus</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>HistoryVehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>HistoryVehicle</label>
    <nameField>
        <label>HistoryVehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HistoryVehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>